fix layout issue on small width viewports where auction-card elements with auction-title values less than 50 characters would cause the card layout to not span the full width of the viewport and layout would not be centered, fixed. added template.html back to project

--- a/src/sass/components/_auction-card.scss
+++ b/src/sass/components/_auction-card.scss
@@ -1,5 +1,5 @@
 .auction-card {
-  grid-column: 2 / span 1;
+  grid-column: 1 / -1;
   display:flex;
   flex-direction: column;
   background-color: $white;
@@ -7,6 +7,9 @@
   align-items: center;
   border-radius: 5px;
   border: 1px solid $black;
+  @media (min-width: $med-screen) {
+    grid-column: 2 / span 1;
+  }
 }
 
 .auction-card__title {
